[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/freq used/Camera2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/scripts/settings_screen.gd" type="Script" id=2]
[ext_resource path="res://scenes/music/music_scene.tscn" type="PackedScene" id=3]
[ext_resource path="res://sound assets/SFX/Pacman DeathGame Over Noise (HD).wav" type="AudioStream" id=4]

[node name="settings_screen" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera2D" parent="." instance=ExtResource( 1 )]
position = Vector2( 330, 180 )

[node name="music_label" type="Label" parent="."]
margin_left = 120.0
margin_top = 180.0
margin_right = 200.0
margin_bottom = 200.0
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX_label" type="Label" parent="."]
margin_left = 120.0
margin_top = 200.0
margin_right = 220.0
margin_bottom = 220.0
text = "Sound Effects"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX_slider" type="HSlider" parent="."]
margin_left = 240.0
margin_top = 200.0
margin_right = 500.0
margin_bottom = 220.0
min_value = -32.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_slider" type="HSlider" parent="."]
margin_left = 240.0
margin_top = 180.0
margin_right = 500.0
margin_bottom = 200.0
min_value = -32.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music scene" parent="." instance=ExtResource( 3 )]

[node name="SFX_test" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="Button" type="Button" parent="."]
margin_left = 440.0
margin_top = 300.0
margin_right = 600.0
margin_bottom = 320.0
text = "Return to Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="SFX_slider" to="." method="_on_SFX_slider_value_changed"]
[connection signal="value_changed" from="music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[editable path="music scene"]
